"something need todo"

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <p>解锁</p>
             </div>
             <div class="direction">
-                <button class="btn prev" id="left" onclick="left()"></button>
-                <button class="btn next" id="right" onclick="right()"></button>
+                <button class="btn prev" id="left" onclick="runLeft()"></button>
+                <button class="btn next" id="right" onclick="runRight()"></button>
             </div>
         </div>
     </div>
@@ -123,17 +123,18 @@
 </div>
 <script type="text/javascript" src="js/closeWindow.js"></script>
 <script type="text/javascript">
-    var total = 18;
+    var end = 18;
+    var head = 0;
     var items = "";
-    var status = -1;
+    var status = 1;
     var item, index;
     var positionStatus, _positionStatus;
     let content = document.getElementById("content");
     window.onload = function () {
-        for (let i = 0; i < total; i++) {
+        for (let i = 0; i < end; i++) {
             if (status == -1) {
                 if (i < 1) {
-                    items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + "00" + "</div>"
+                    items += "<div class='items' id='fixed'>" + "<div class='i-head' id='i-head'>" + "00" + "</div>"
                         + "<div class='i-body'>" + "<div class='i-window i-gWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                         + "</div>" + "</div>";
                 } else if (i > 0) {
@@ -145,72 +146,73 @@
                         + "</div>" + "</div>";
                 }
                 content.innerHTML = items;
-                positionStatus = total;
+                positionStatus = 0;
+                _positionStatus = end;
                 $(".direction #left").attr("class", "btn prev disabled");
             } else if (status == 0) {
-                let mid = Math.ceil(total / 2);
+                let mid = Math.ceil(end / 2);
                 if (mid < 10) {
                     if (i < mid) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id=i></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else if (i === mid) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + "0" + mid + "</div>"
+                        items += "<div class='items r-items' id='fixed'>" + "<div class='i-head' id='i-head'>" + "0" + mid + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-gWindow' id=i></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else if (mid < i && i < 10) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     }
                 } else {
                     if (i < 10) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + "0" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else if (i < mid) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else if (i === mid) {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + mid + "</div>"
+                        items += "<div class='items r-items' id='fixed'>" + "<div class='i-head' id='i-head'>" + mid + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-gWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     } else {
-                        items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
+                        items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
                             + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                             + "</div>" + "</div>";
                     }
                 }
-                let width = (total + 1) * 37;
+                let width = (end + 1) * 37;
                 content.style.paddingLeft = "37px";
                 content.style.width = width + "px";
                 content.innerHTML = items;
-                positionStatus = mid + 1;
-                _positionStatus = mid - 1;
+                positionStatus = mid - 1;
+                _positionStatus = mid + 1;
 
             } else if (status == 1) {
-                if (i < total - 1) {
+                if (i < end - 1) {
                     if (i < 10) {
                         i = "0" + i;
                     }
-                    items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
+                    items += "<div class='items r-items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
                         + "<div class='i-body'>" + "<div class='i-window i-nWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                         + "</div>" + "</div>";
                 }
                 else {
-                    items += "<div class='items'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
+                    items += "<div class='items r-items' id='fixed'>" + "<div class='i-head' id='i-head'>" + i + "</div>"
                         + "<div class='i-body'>" + "<div class='i-window i-gWindow' id='i-window'></div>" + "<div class='i-mid'></div>"
                         + "</div>" + "</div>";
                 }
-                content.style.paddingLeft = "37px";
                 content.innerHTML = items;
-                $(".direction #right").attr("class", "btn prev disabled");
+                $(".direction #right").attr("class", "btn next disabled");
                 positionStatus = 0;
+                _positionStatus = end;
             } else {
                 console.log("something wrong!")
             }
@@ -230,10 +232,30 @@
                 $(this).find("#i-window").attr("class", "i-window i-gWindow i-wActive");
             }
         }
+        if (status == -1 || positionStatus > index || _positionStatus > index) {
+            //向右移动
+            $(".direction #left").attr("class", "btn prev disabled");
+            $(".direction #right").removeClass("btn next disabled");
+            $(".direction #right").attr("class", "btn next");
+            $(".direction #right").removeAttr("disabled");
+        } else if (status == 0) {
+            //两侧均可移动
+            $(".direction #left").removeClass("btn prev disabled");
+            $(".direction #right").removeClass("btn next disabled");
+            $(".direction #left").attr("class", "btn prev");
+            $(".direction #right").attr("class", "btn next");
+            $(".direction button").removeAttr("disabled");
+        } else if (status == 1 || positionStatus < index || _positionStatus < index) {
+            //向左移动
+            $(".direction #right").attr("class", "btn next disabled");
+            $(".direction #left").removeClass("btn prev disabled");
+            $(".direction #left").attr("class", "btn prev");
+            $(".direction #left").removeAttr("disabled");
+        }
     });
-    let locStatus = true;
+    var locStatus = true;
     var lock = function () {
-        if (locStatus) {
+        if (!locStatus) {
             $("#locked").removeClass("icon-unlock");
             $("#locked").attr("class", "icon-lock icon-locked");
             $(".circle").animate({left: "33px"}, 100);
@@ -243,7 +265,6 @@
             $(".direction #left").attr("class", "btn prev disabled");
             $(".direction #right").attr("class", "btn next disabled");
             $(".direction button").attr("disabled", true);
-            locStatus = !locStatus;
         } else {
             $("#locked").removeClass("icon-locked");
             $("#locked").attr("class", "icon-lock icon-unlock");
@@ -251,31 +272,91 @@
             $(".lock").removeClass("locked");
             $(".lock").attr("class", "lock unlock")
             $(".lock").find("p").text("解锁");
-            if (status == -1 || positionStatus > index) {
-                $(".direction #left").attr("class", "btn prev disabled");
-                $(".direction #right").removeClass("btn next disabled");
-                $(".direction #right").attr("class", "btn next");
-                $(".direction #right").removeAttr("disabled");
-            } else if (status == 0) {
-                $(".direction #left").removeClass("btn prev disabled");
-                $(".direction #right").removeClass("btn next disabled");
-                $(".direction #left").attr("class", "btn prev");
-                $(".direction #right").attr("class", "btn next");
-                $(".direction button").removeAttr("disabled");
-            } else if (status == 1 || positionStatus < index) {
-                $(".direction #right").attr("class", "btn prev disabled");
-                $(".direction #left").removeClass("btn next disabled");
-                $(".direction #left").attr("class", "btn next");
-                $(".direction #left").removeAttr("disabled");
-            }
-            locStatus = !locStatus;
+            console.log(index);
         }
     }
-    var right = function () {
-        let itemArray = document.getElementsByClassName("items");
-        for (let j = positionStatus; j > index; j--) {
-            $(itemArray[j]).animate({left: "37px"}, 2000);
+    let itemsArray = document.getElementsByClassName("items");
+    let fixed;
+    if(status == -1){
+        fixed = 0;
+    }else if(status == 0){
+        fixed = Math.ceil(end / 2);
+    }else{
+        fixed = end - 1;
+    }
+
+    var lInterval, rInterval;
+    let flag;
+    var left = function () {
+        if(fixed == end - 1){         //固定列在右
+            $(itemsArray[head]).animate({left: "0"}, 5000);
+            lInterval = setInterval(function () {
+                if (head < flag + 1 && head < end - 1 ) {
+                    $(itemsArray[head + 1]).animate({left: "0"}, 5000);
+                    head++;
+                }
+            }, 1000);
+        }else if(fixed == Math.ceil(end / 2)){         //固定列在中
+            $(itemsArray[head]).animate({left: "0"}, 5000);
+            lInterval = setInterval(function () {
+                if (head < flag + 1 && flag < Math.ceil(end / 2) - 2) {
+                    $(itemsArray[head + 1]).animate({left: "0"}, 5000);
+                    head++;
+                }
+            }, 1000);
+        }else {                         //固定列在左
+            $(itemsArray[head]).animate({left: "0"}, 5000);
+            lInterval = setInterval(function () {
+                if (head < flag ) {
+                    $(itemsArray[head + 1]).animate({left: "0"}, 5000);
+                    head++;
+                }
+            }, 1000);
         }
+        status = null;
+        positionStatus = index + 1;
+        flag = index;
+        end = flag +1;
+    }
+    var runLeft = function () {
+        clearInterval(lInterval);
+        left();
+    }
+    var right = function () {
+        if(fixed == end - 1){
+            $(itemsArray[end - 1]).animate({left: "37px"}, 4000);
+            rInterval = setInterval(function () {
+                if (flag < end  && end > 2) {
+                    $(itemsArray[end - 2]).animate({left: "37px"}, 4000);
+                    end--;
+                }
+            }, 1500);
+        }else if(fixed == Math.ceil(end / 2)){
+            $(itemsArray[end - 1]).animate({left: "37px"}, 4000);
+            rInterval = setInterval(function () {
+                if (flag < end && end > Math.ceil(end / 2) + 2) {
+                    $(itemsArray[end - 2]).animate({left: "37px"}, 4000);
+                    end--;
+                }
+            }, 1500);
+        }else{
+            $(itemsArray[end - 1]).animate({left: "37px"}, 5000);
+            rInterval = setInterval(function () {
+                if (flag < end ) {
+                    $(itemsArray[end - 1]).animate({left: "37px"}, 5000);
+                    end--;
+                }
+            }, 1500);
+        }
+        status = null;
+        flag = index;
+        head = flag;
+        _positionStatus = index - 1;
+
+    }
+    var runRight = function () {
+        clearInterval(rInterval);
+        right();
     }
 </script>
 </body>
